--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -12,24 +12,30 @@
                 <wm-gridrow name="gridrow8">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
                         <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)"
-                        show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully">
+                        show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully" iconclass="wi wi-vpn-key">
                             <wm-layoutgrid columns="1" name="layoutgrid2">
+                                <wm-gridrow name="gridrow6">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn10">
+                                        <wm-label padding="unset 0.5em unset unset" caption="PASSWORD REQUIREMENTS:" fontweight="bold" name="label2"></wm-label>
+                                        <wm-label padding="unset 0.5em" caption="All passwords must contain a minimum of 8 characters including at least 1 capital letter, 1 number, and 1 special character (e.g. @$!%*?&amp;)" name="label3_1"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow9">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn23">
                                         <wm-form-field name="newPassword" displayname="New Password" key="newPassword" type="string" show="true" widget="text" placeholder="Enter Password" required="required" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
-                                        validationmessage="PASSWORD REQUIREMENTS. All passwords must contain a minimum of 8 characters. You must use a minimum of 1 letter, 1 number and one special symbol." inputtype="password" updateon="default"></wm-form-field>
+                                        inputtype="password" updateon="default"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
-                                        <wm-form-field name="retypePassword" displayname="Retype Password" widget="text" show="true" type="custom" placeholder="Re Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
-                                        required="required" validationmessage="PASSWORD REQUIREMENTS. All passwords must contain a minimum of 8 characters. You must use a minimum of 1 letter, 1 number and one special symbol." inputtype="password" key="retypePassword"></wm-form-field>
+                                        <wm-form-field name="retypePassword" displayname="Confirm Password" widget="text" show="true" type="custom" placeholder="Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
+                                        required="required" inputtype="password" key="retypePassword"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                             <wm-form-field name="token" displayname="Token" key="token" type="string" show="false" widget="text" defaultvalue="bind:token" autocomplete="false" inputtype="text" placeholder="Enter value"></wm-form-field>
                             <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
-                                <wm-button caption="Reset Password" type="submit" class="btn-primary" name="button4"></wm-button>
+                                <wm-button caption="Reset Password" type="submit" class="btn-primary" name="button4" iconclass="wi wi-update"></wm-button>
                             </wm-buttongroup>
                         </wm-form>
                     </wm-gridcolumn>
